--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -31,7 +31,7 @@ jobs:
        # Docker build context
        path: .
        # Static image tag list, separated by comma
-       tags: ${{ $MY_VAR }} # optional, default is latest
+       tags: ${{ env.MY_VAR }} # optional, default is latest
        # Docker build-time variables, separated by comma
        #build_args: # optional
        # If allow pull request trigger build
